--- a/src/modules/Main/index.css
+++ b/src/modules/Main/index.css
@@ -1,6 +1,36 @@
 .wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
+    width: 80%;
+    height: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.artistData {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 150px;
+}
+
+.paper {
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5!important;
+}
+
+.error-message {
+    color: #d32f2f;
+}
+
+.input {
+    display: none;
+}
+
+.title {
+    margin-bottom: 40px;
 }
